src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Cases-Closed Referrals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases-Customers</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases-IT</fullName>
        <description>Ticketing for ETS</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases-NCM</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases-QC</fullName>
        <description>kudos &amp; errors</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases-Re-Open Referrals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases-Referrals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_Employee__c</fullName>
        <label>Address (Employee)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Employer__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address for Employer</inlineHelpText>
        <label>Address (Employer)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Referring_Company__c</fullName>
        <description>Address Referring Company</description>
        <label>Address (Referring Company)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Treating_Physician__c</fullName>
        <description>Address (Treating Physician)</description>
        <label>Address (Treating Physician)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Number__c</fullName>
        <description>Alternate Contact Number</description>
        <label>Alternate Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Approval Date</description>
        <label>Employee Attorney Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_for_NCM__c</fullName>
        <description>Approval for NCM?</description>
        <label>Employee Attorney Approval for NCM?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, attorney has not responded to request for authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AreaNumber__c</fullName>
        <formula>TEXT(AssignmentRegion__r.AreaNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code_Region__c</fullName>
        <formula>text(Area_Code__r.Region__c)</formula>
        <label>Area Code Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Code</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Cases (Area Code)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignmentRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Region</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Region__c</fullName>
        <description>New Referral - Assignment Region</description>
        <label>Assignment Region (Old)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attorney_Applicant_Address__c</fullName>
        <description>Attorney (Applicant) Address</description>
        <label>Attorney (Applicant) Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Applicant_City__c</fullName>
        <description>Attorney (Applicant) City</description>
        <label>Attorney (Applicant) City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Applicant_State__c</fullName>
        <description>Attorney (Applicant) State</description>
        <label>Attorney (Applicant) State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attorney_Applicant_Zip__c</fullName>
        <description>Attorney (Applicant) Zip</description>
        <label>Attorney (Applicant) Zip</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Defense_Address__c</fullName>
        <description>Attorney (Defense) Address</description>
        <label>Attorney (Defense) Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Defense_City__c</fullName>
        <description>Attorney (Defense) City</description>
        <label>Attorney (Defense) City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Defense_Contact_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attorney (Defense) Contact Record</description>
        <inlineHelpText>Link to the Contact record for this Defense Attorney</inlineHelpText>
        <label>Attorney (Defense) Contact Record</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Attorney (Defense) Contact Record)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_Defense_State__c</fullName>
        <description>Attorney (Defense) State</description>
        <label>Attorney (Defense) State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attorney_Defense_Zip__c</fullName>
        <description>Attorney (Defense) Zip</description>
        <label>Attorney (Defense) Zip</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Defense__c</fullName>
        <description>Attorney (Defense)</description>
        <label>Attorney (Defense)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Employee_Contact_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attorney Employee Contact Record</description>
        <inlineHelpText>Link to the Contact record for this Employee Attorney</inlineHelpText>
        <label>Attorney (Employee) Contact Record</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_Employee__c</fullName>
        <description>Attorney (Employee)</description>
        <label>Attorney (Employee)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attorney Present</description>
        <label>Attorney Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attorney_Representation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attorney Representation</description>
        <label>Employee Attorney Representation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableCMs__c</fullName>
        <label>Available CM&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Reports_To__c</fullName>
        <description>CC Reports To:</description>
        <label>CC Reports To:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMSupervisorAssessmentRecommendation__c</fullName>
        <inlineHelpText>CM Supervisor to provide their assessment of the incident and provide their recommendation on how to handle with Case Manager and Customer.</inlineHelpText>
        <label>CM Supervisor Assessment/Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_Submitted_Prof_Hours_Current_PPE__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>CM Submitted Prof Hours Current PPE</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRRManagerSummary__c</fullName>
        <inlineHelpText>CRR Manager to provide thorough synopsis of the customer&apos;s reaction/perception/expectation regarding the concern/issue.</inlineHelpText>
        <label>CRR Manager Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRR_Assigned__c</fullName>
        <description>Sales/Marketing Rep assigned to specific Cases and Case Report/Opportunity</description>
        <inlineHelpText>Select CRR</inlineHelpText>
        <label>CRR Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kerry Hennessy</fullName>
                </value>
                <value>
                    <fullName>Adam Thomas</fullName>
                </value>
                <value>
                    <fullName>Cathan Cokas</fullName>
                </value>
                <value>
                    <fullName>Miguel Alcocer</fullName>
                </value>
                <value>
                    <fullName>Christopher Evans</fullName>
                </value>
                <value>
                    <fullName>Alysha Loumakis-Calderon</fullName>
                </value>
                <value>
                    <fullName>Chris Loumakis</fullName>
                </value>
                <value>
                    <fullName>365</fullName>
                </value>
                <value>
                    <fullName>Ciara Vesely</fullName>
                </value>
                <value>
                    <fullName>Teresa Molina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRR_Supervisor__c</fullName>
        <description>CRR Supervisor at time of referral</description>
        <inlineHelpText>CRR Supervisor at time of referral</inlineHelpText>
        <label>CRR Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kerry Hennessy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseClosedDate__c</fullName>
        <label>Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseNumberMedMgmt__c</fullName>
        <inlineHelpText>Indicate the Case Number related to the Employee (Injured Worker) from the Medical Mgmt Case.</inlineHelpText>
        <label>Case Number - Med Mgmt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseOpenedDate__c</fullName>
        <label>Case Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseReportMailingInstructions__c</fullName>
        <label>Case Report Mailing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Input__c</fullName>
        <label>Case Manager Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Report__c</fullName>
        <label>Case Report #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <inlineHelpText>Select Cases-Customer Type</inlineHelpText>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kudos</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Billing/Invoice Issue</fullName>
                </value>
                <value>
                    <fullName>Expense Report Issue</fullName>
                </value>
                <value>
                    <fullName>Processing Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cases_Closed_Current_Year__c</fullName>
        <description>This field was created to assist with reporting closed files for current year only.  It is not visible on any layouts.</description>
        <formula>IF(
OR(
!ISPICKVAL(Status, &quot;Closed&quot;),
AND(IsClosed,
YEAR(TODAY()) = YEAR(DATEVALUE(ClosedDate )))), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Cases Closed Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_of_Complaint__c</fullName>
        <label>Category of Complaint</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM not being proactive</fullName>
                </value>
                <value>
                    <fullName>Billing/cost issue</fullName>
                </value>
                <value>
                    <fullName>CM performance-did not act appropriately</fullName>
                </value>
                <value>
                    <fullName>Personality conflict</fullName>
                </value>
                <value>
                    <fullName>CM not following protocols/guidelines</fullName>
                </value>
                <value>
                    <fullName>CM not following special instructions</fullName>
                </value>
                <value>
                    <fullName>CM not updating the customer</fullName>
                </value>
                <value>
                    <fullName>CM not communicating</fullName>
                </value>
                <value>
                    <fullName>Low report card rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <description>Claim Number</description>
        <label>Claim Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Time__c</fullName>
        <description>Claim Time</description>
        <label>Claim Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimant__c</fullName>
        <description>Claimant</description>
        <label>Claimant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimsProf__c</fullName>
        <description>This is used for web to case form.</description>
        <label>ClaimsProf</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Attorneys__c</fullName>
        <inlineHelpText>This field is for reference only and is limited to 255 characters.  If you want to input longer notes please use the &quot;Case Manager Notes&quot; section on the Case Page (olive-green).</inlineHelpText>
        <label>Comments (Attorneys)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Employee__c</fullName>
        <inlineHelpText>This field is for reference only and is limited to 255 characters.  If you want to input longer notes please use the &quot;Case Manager Notes&quot; section on the Case Page (olive-green).</inlineHelpText>
        <label>Comments (Employee)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Employer__c</fullName>
        <inlineHelpText>This field is for reference only and is limited to 255 characters.  If you want to input longer notes please use the &quot;Case Manager Notes&quot; section on the Case Page (olive-green).</inlineHelpText>
        <label>Comments (Employer)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_PTP__c</fullName>
        <inlineHelpText>This field is for reference only and is limited to 255 characters.  If you want to input longer notes please use the &quot;Case Manager Notes&quot; section on the Case Page (olive-green).</inlineHelpText>
        <label>Comments (PTP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <description>Contact Person</description>
        <label>Contact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Closure_Date__c</fullName>
        <description>This is the correct closure date to use when using reports.</description>
        <formula>IF( ISBLANK( X5th_Time_Closed_Date_Time__c ) , 
 IF( ISBLANK( X4th_Time_Closed_Date_Time__c ) , 
 IF( ISBLANK( X3rd_Time_Closed_Date_Time__c ) , 
 IF( ISBLANK( X2nd_Time_Closed_Date_Time__c ) ,  X1st_Time_Closed_Date_Time__c , 
X2nd_Time_Closed_Date_Time__c ),
X3rd_Time_Closed_Date_Time__c ),
X4th_Time_Closed_Date_Time__c ),
X5th_Time_Closed_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct Closure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CoveringCMMileage__c</fullName>
        <label>Covering CM Mileage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringCMProfHoursCredit__c</fullName>
        <label>Covering CM Prof. Hours Credit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringCMProfHours__c</fullName>
        <label>Covering CM Prof. Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringCMTravelWaitHoursCredit__c</fullName>
        <label>Covering CM Travel/Wait Hours Credit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveringCMTravelWaitHours__c</fullName>
        <label>Covering CM Travel/Wait Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Diagnosis__c</fullName>
        <description>Current Diagnosis</description>
        <inlineHelpText>If more than three diagnoses, list as 1. 2. 3. 4. etc.

For one to three diagnoses, write as narrative.</inlineHelpText>
        <label>Current Diagnosis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_PTP_City__c</fullName>
        <label>Current PTP City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_PTP_Street_Address__c</fullName>
        <label>Current PTP Street Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_PTP__c</fullName>
        <label>Current PTP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Prognosis__c</fullName>
        <description>Current Prognosis</description>
        <inlineHelpText>Indicate excellent, good, fair, poor followed by description of anticipated recovery status. Also include  which criteria this is based upon i.e. PTP, consulting MD, ACOEM, ADA, NCM.</inlineHelpText>
        <label>Current Prognosis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Treatment__c</fullName>
        <description>Current Treatment</description>
        <inlineHelpText>If more than five treatment recommendations, list as 1. 2. 3. 4. 5.

For one to five treatment recommendations, write in narrative.</inlineHelpText>
        <label>Current Treatment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Work_Status__c</fullName>
        <description>Current Work Status</description>
        <inlineHelpText>Indicate full duty, modified duty, Total Temporary Disability (TTD), permanently disabled, retired, unemployed.</inlineHelpText>
        <label>Current Work Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Guidelines__c</fullName>
        <description>Customer Special Guidelines</description>
        <inlineHelpText>Customer Special Guidelines</inlineHelpText>
        <label>Customer Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DateEmployerContactAuthGiven__c</fullName>
        <label>Date Employer Contact Auth Given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Report__c</fullName>
        <label>Date of Last Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Appointment__c</fullName>
        <description>Date/Time of Next Appointment</description>
        <label>Date/Time of Next Appointment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_injury_MM_DD_YYYY__c</fullName>
        <description>Date of Injury (MM/DD/YYYY)</description>
        <label>Date of Injury (MM/DD/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofIssue__c</fullName>
        <label>Date of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_Injury_to_Referral_Date2__c</fullName>
        <formula>Referral_Date__c- Date_of_injury_MM_DD_YYYY__c</formula>
        <label>Days from Injury to Referral Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Referral_to_Initial__c</fullName>
        <formula>Initial_Report_Submission_Date__c - Referral_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Referral to Initial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_injury_to_referral_date__c</fullName>
        <description>Time from injury to referral date.</description>
        <inlineHelpText>Enter the number of days, if injury and referral are on the same day, enter the number zero (0).</inlineHelpText>
        <label>Days from injury to referral date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefenseAttorneyccCaseReports__c</fullName>
        <inlineHelpText>If applicable, indicate if CP has requested the Defense Attorney (DA) be cc: on Case Reports.</inlineHelpText>
        <label>Defense Attorney - cc: Case Reports?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefenseAttorneyccrequestdate__c</fullName>
        <label>Defense Attorney cc: request date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DefenseAttorneycomments__c</fullName>
        <label>Defense Attorney - comment(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscussIssues__c</fullName>
        <inlineHelpText>Would you like to be contacted to discuss and issues or concerns?  Yes/No</inlineHelpText>
        <label>Discuss Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Email__c</fullName>
        <inlineHelpText>Insert EE email address or specify reason for no email address</inlineHelpText>
        <label>EE Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUF_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if EUF is required</inlineHelpText>
        <label>EUF Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUF_Sent_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EUF Sent to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (EUF Sent to)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Employer__c</fullName>
        <description>Email for Employer</description>
        <label>Email (Employer)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailsenttoCMSupervisor__c</fullName>
        <inlineHelpText>Indicate date and time of when initial email was sent to CM Supervisor</inlineHelpText>
        <label>Email sent to CM Supervisor</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailsenttoHumanResources__c</fullName>
        <inlineHelpText>Indicate date and time when summary and CMA link was emailed to Human Resources.</inlineHelpText>
        <label>Email sent to Human Resources</label>
        <type>DateTime</type>
    </fields>
</CustomObject>